Changed title to just Attaboy!

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand homelink" href="#">Attaboy, me!</a>
+          <a class="navbar-brand homelink" href="#">Attaboy!</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul id="topnavul" class="nav navbar-nav">
