--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Site Title</title>
+    <title>Attaboy!</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/css/bootstrap/bootstrap.min.css" rel="stylesheet">
@@ -39,24 +39,7 @@
           <ul id="topnavul" class="nav navbar-nav">
             <li id="contentsli" class="navli"><a id="contentstopnav" href="#contents/alpha">Contents</a></li>
             <li id="aboutli" class="navli"><a id="abouttopnav" href="#about">About</a></li>
-            <li><a href="mailto:someone@somewhere.com">Contact</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Default</a></li>
-            <li><a href="#">Static top</a></li>
-            <li class="active"><a href="./">Fixed top</a></li>
+            <li><a href="mailto:softwaredjinn@softwaredjinn.com">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
